--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+### Properties ###
+application.properties
+applcation-aws.yml
 
 ### STS ###
 .apt_generated
