[update] Properties 오타 수정

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 ### Properties ###
 application.properties
-applcation-aws.yml
+application-aws.yml
 
 ### STS ###
 .apt_generated
