--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
       matching-strategy: ant_path_matcher
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://ec2-43-200-70-107.ap-northeast-2.compute.amazonaws.com:3306/likelion-db
+    url: jdbc:mysql://localhost:3306/likelion-db
     username: root
     password: 1234
